fix: collapse of navbar

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,16 +28,16 @@ $card-height: 100%;
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/grid";
-@import "../../node_modules/bootstrap/scss/helpers";
+@import "../../node_modules/bootstrap/scss/tables";
+@import "../../node_modules/bootstrap/scss/buttons";
+@import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
-@import "../../node_modules/bootstrap/scss/dropdown";
-@import "../../node_modules/bootstrap/scss/buttons";
-@import "../../node_modules/bootstrap/scss/tables";
-@import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/card";
+@import "../../node_modules/bootstrap/scss/helpers";
 
 // 5. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../node_modules/bootstrap/scss/utilities/api";
@@ -45,6 +45,10 @@ $card-height: 100%;
 // 6. Add additional custom code here
 body {
   font-family: $font-family-serif;
+}
+
+.text-sans-serif {
+  font-family: $font-family-sans-serif !important;
 }
 
 .lead {
@@ -58,9 +62,11 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   color: white;
+  margin-top: 3.5rem;
 }
 
-.hero h1 {
+.hero h1,
+footer a {
   color: white !important;
 }
 
@@ -108,4 +114,12 @@ table{
 
 .fixed-top {
   position: fixed !important;
+}
+
+.twitter:hover {
+  color: #1DA1F2 !important;
+}
+
+.youtube:hover {
+  color: #FF0000 !important;
 }
